# mansplain

./: Cargo.toml  readme.MD
src/: main.rs
